Font not displaying
Trying to get the custom font to show on GitHub page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family:"Big_Noodle_Titling";
-  src:url("Big_Noodle_Titling.ttf");
+  src:url("Big_Noodle_Titling.ttf") format('truetype');
 }
 .noodle-font {
 	font-family: "Big_Noodle_Titling";
