Fixing custom font
HTTPS seems to be causing an issue. Removing it from the custom font
url.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family:"Big_Noodle_Titling";
-  src:url("https://roblehesa.com/assets/css/big_noodle_titling.ttf") format('truetype');
+  src:url("roblehesa.com/assets/css/big_noodle_titling.ttf") format('truetype');
 }
 .noodle-font {
 	font-family: "Big_Noodle_Titling";
