--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ video#bgvid {
 	border-radius: 25px;
 	border: 1px solid #000000;
 	height: 60px;
+	overflow:hidden;
 }
 #python {
 	background: #FF4D4D;
